dataset1235/2025-2/2947369575/users/1530961528/executions/1003782500_775838323.log
== RUN (2025-09-01 21:21:14)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3

n = (n1 + n2 +n3) / 3
print(n)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:21:15)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3

n = (n1 + n2 +n3) / 3
print(n)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 21:21:14)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3

n = (n1 + n2 +n3) / 3
print(n)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 21:21:04)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3

n = (n1 + n2 +n3) / 3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(m)
          ^
NameError: name 'm' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(m)
          ^
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
